--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
+    "moment": "^2.7.0",
     "mongoskin": "^1.4.4",
     "mysql": "^2.3.2",
     "request": "^2.36.0"
